# mcproto-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: byte_order.rs  chat.rs  deserialize.rs  lib.rs  nbt.rs  protocol.rs  serialize.rs  status.rs  test_macros.rs  types.rs  utils.rs  uuid.rs  v1_15_2.rs  v1_16_3.rs
