[package]
name = "mcproto-rs"
version = "0.2.0"
authors = ["Joey Sacchini <joey@sacchini.net>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["minecraft", "games", "protocol", "serialziers", "deserializers", "packets", "mc"]

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
base64 = { version = "0.12.3", default-features = false, features = ["alloc"] }
rand = { version = "0.7", optional = true }
paste = "1.0.1"

[dependencies.serde]
version = "1.0.116"
features = [ "derive", "alloc" ]
default-features = false

[dev-dependencies]
flate2 = "1.0.17"

[features]
default = [ "std", "bench" ]

std = [ "rand" ]
bench = []